--- a/php-cas/Dockerfile
+++ b/php-cas/Dockerfile
@@ -5,10 +5,10 @@ RUN yum -y update \
     && yum -y clean all
 
 RUN git clone --depth=1 --branch=1.3-stable https://github.com/apereo/phpCAS.git apereo/phpCAS \
- && pear upgrade --force --alldeps \
- && cd apereo/phpCAS/utils \
- && pear install --onlyreqdeps PEAR_PackageFileManager2-beta \
- && ant dist -Ddoxygen.path=/usr/bin/doxygen -Dphp.path=/usr/bin/php
+    && pear upgrade --force --alldeps \
+    && cd apereo/phpCAS/utils \
+    && pear install --onlyreqdeps PEAR_PackageFileManager2-beta \
+    && ant dist -Ddoxygen.path=/usr/bin/doxygen -Dphp.path=/usr/bin/php
 
 FROM centos:centos7
 
@@ -18,10 +18,10 @@ RUN yum -y update \
     && yum -y install httpd mod_ssl php php-pear php-xml php-pdo wget \
     && yum -y clean all
 
-COPY --from=stage /apereo/phpCAS/utils/dist/CAS-1.3.4.tgz /
+RUN wget https://github.com/apereo/phpCAS/releases/download/1.3.7/CAS-1.3.6.tgz
 
-RUN pear install CAS-1.3.4.tgz \
- && rm /CAS-1.3.4.tgz
+RUN pear install CAS-1.3.6.tgz \
+    && rm /CAS-1.3.6.tgz
 
 COPY httpd-foreground /usr/local/bin/
 COPY etc-httpd/ /etc/httpd/
