IN-PROGRESS: Install Node and create simple app on SP

--- a/sp/etc-httpd/conf.d/sp.conf
+++ b/sp/etc-httpd/conf.d/sp.conf
@@ -10,6 +10,22 @@ ServerName idptestbed
         AuthType shibboleth
         ShibRequestSetting requireSession 1
         require shib-session
+        RequestHeader set X-Auth-Type       %{AUTH_TYPE}e
+        RequestHeader set X-EPPN            %{eppn}e
+        RequestHeader set X-Shib-Session-ID %{Shib-Session-ID}e
+    </Location>
+
+    <Location /myapp>
+        ServerName localhost
+        ProxyRequests On
+        ProxyPass / http://localhost:3000/
+        ProxyPassReverse / http://localhost:3000/
+        AuthType shibboleth
+        ShibRequestSetting requireSession 1
+        require shib-session
+        RequestHeader set X-Auth-Type       %{AUTH_TYPE}e
+        RequestHeader set X-EPPN            %{eppn}e
+        RequestHeader set X-Shib-Session-ID %{Shib-Session-ID}e
     </Location>
     
 </VirtualHost>
