--- a/httpd-proxy/etc-httpd/conf.d/httpd.conf
+++ b/httpd-proxy/etc-httpd/conf.d/httpd.conf
@@ -46,6 +46,13 @@ EECDH EDH+aRSA !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS !RC4"
 
     ProxyPass /php-shib-protected http://sp/php-shib-protected
 
+    <LocationMatch "/myapp">
+    ProxyPass /myapp http://sp/myapp
+    RequestHeader set X-Auth-Type       %{AUTH_TYPE}e
+    RequestHeader set X-EPPN            %{eppn}e
+    RequestHeader set X-Shib-Session-ID %{Shib-Session-ID}e
+    </LocationMatch>
+
     ProxyPass /php-cas http://php-cas/php-cas
     ProxyPassReverse /php-cas http://php-cas/php-cas
 
