Continued in progress work

--- a/sp/etc-httpd/conf.d/sp.conf
+++ b/sp/etc-httpd/conf.d/sp.conf
@@ -3,6 +3,7 @@ ServerName idptestbed
 <VirtualHost *:80>
     ServerName https://idptestbed:443
     UseCanonicalName On
+    ProxyRequests On
 
     DocumentRoot "/var/www/html"
 
@@ -15,11 +16,9 @@ ServerName idptestbed
         RequestHeader set X-Shib-Session-ID %{Shib-Session-ID}e
     </Location>
 
-    <Location /myapp>
-        ServerName localhost
-        ProxyRequests On
-        ProxyPass / http://localhost:3000/
-        ProxyPassReverse / http://localhost:3000/
+    <Location /protected-myapp>
+        ProxyPass http://localhost:3000/
+        ProxyPassReverse http://localhost:3000/
         AuthType shibboleth
         ShibRequestSetting requireSession 1
         require shib-session
