--- a/sp/etc-httpd/conf.d/sp.conf
+++ b/sp/etc-httpd/conf.d/sp.conf
@@ -17,14 +17,16 @@ ServerName idptestbed
     </Location>
 
     <Location /protected-myapp>
-        ProxyPass http://localhost:3000/
-        ProxyPassReverse http://localhost:3000/
+        ProxyPass http://idptestbed:3000/
+        ProxyPassReverse http://idptestbed:3000/
         AuthType shibboleth
         ShibRequestSetting requireSession 1
         require shib-session
         RequestHeader set X-Auth-Type       %{AUTH_TYPE}e
         RequestHeader set X-EPPN            %{eppn}e
         RequestHeader set X-Shib-Session-ID %{Shib-Session-ID}e
+        RequestHeader set X-Remote_User %{REMOTE_USER}e
+        RequestHeader set X-UID %{uid}e
     </Location>
     
 </VirtualHost>
